[gd_scene load_steps=32 format=2]

[ext_resource path="res://EnemyBody.gd" type="Script" id=1]
[ext_resource path="res://EnemyShadowBody.gd" type="Script" id=2]
[ext_resource path="res://Enemy.tres" type="SpriteFrames" id=3]
[ext_resource path="res://src/HealthBars/BackGround.png" type="Texture" id=4]
[ext_resource path="res://src/HealthBars/HealthBar.png" type="Texture" id=5]
[ext_resource path="res://src/HealthBars/Empty_healthBar.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=37]
radius = 17.1253
height = 28.0648

[sub_resource type="Animation" id=39]
resource_name = "Dying"
length = 0.9
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "dying" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HealthBar:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EnemyRange/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../EnemyShadowBody/AnimatedSprite:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "dying" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../EnemyShadowBody/AnimatedSprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "hurt" ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hurt"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../EnemyShadowBody/AnimatedSprite:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "hurt" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../EnemyShadowBody/AnimatedSprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "idle" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../EnemyShadowBody/AnimatedSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../EnemyShadowBody/AnimatedSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("EnemyRange/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HealthBar:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=25]
resource_name = "Run_Left"
length = 0.9
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12.928, 8.648 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EnemyRange/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 13.6053, -7.37428 ), Vector2( 13.6053, -7.37428 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimatedSprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../EnemyShadowBody/AnimatedSprite:animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "run" ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../EnemyShadowBody/AnimatedSprite:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../EnemyShadowBody/AnimatedSprite:flip_h")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("HealthBar:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 21.1993, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("../EnemyShadowBody/CollisionShape2D:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8.42253, -24 ) ]
}

[sub_resource type="Animation" id=26]
resource_name = "Run_Right"
length = 0.9
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4.74566, 8.48267 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EnemyRange/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -12.1988, -7.39608 ), Vector2( -12.1988, -7.39608 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimatedSprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../EnemyShadowBody/AnimatedSprite:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../EnemyShadowBody/AnimatedSprite:animation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "run" ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../EnemyShadowBody/AnimatedSprite:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("HealthBar:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("../EnemyShadowBody/CollisionShape2D:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8.79374, -24 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "Dying"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Hurt"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "Run_Left"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "Run_Right"

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=36]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=41]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=9]
states/Dying/node = SubResource( 40 )
states/Dying/position = Vector2( 486, 241 )
states/Hurt/node = SubResource( 14 )
states/Hurt/position = Vector2( 354, 163 )
states/Idle/node = SubResource( 8 )
states/Idle/position = Vector2( 354, 68 )
states/Run_Left/node = SubResource( 27 )
states/Run_Left/position = Vector2( 157, 131 )
states/Run_Right/node = SubResource( 28 )
states/Run_Right/position = Vector2( 551, 131 )
transitions = [ "Idle", "Hurt", SubResource( 15 ), "Hurt", "Idle", SubResource( 16 ), "Run_Left", "Idle", SubResource( 29 ), "Idle", "Run_Right", SubResource( 30 ), "Idle", "Run_Left", SubResource( 31 ), "Run_Right", "Idle", SubResource( 32 ), "Run_Left", "Hurt", SubResource( 33 ), "Run_Right", "Hurt", SubResource( 34 ), "Hurt", "Run_Right", SubResource( 35 ), "Hurt", "Run_Left", SubResource( 36 ), "Hurt", "Dying", SubResource( 41 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=10]

[sub_resource type="RectangleShape2D" id=38]
extents = Vector2( 7.40691, 0.373621 )

[node name="EnemyNode" type="Node2D"]
scale = Vector2( 1.2, 1.2 )

[node name="EnemyBody" type="KinematicBody2D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="EnemyRange" type="Area2D" parent="EnemyBody"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyBody/EnemyRange"]
position = Vector2( -12.1988, -7.39608 )
rotation = 3.14159
shape = SubResource( 37 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="EnemyBody"]
frames = ExtResource( 3 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="EnemyBody"]
position = Vector2( -4.74566, 8.48267 )
scale = Vector2( 0.64496, 0.994552 )
polygon = PoolVector2Array( -0.599659, -7.81218, 4.97068, -4.5127, 5.11457, 15.0824, -20.5853, 15.1465, -20.3569, -4.33134, -8.13712, -11.8855 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnemyBody"]
anims/Dying = SubResource( 39 )
anims/Hurt = SubResource( 13 )
anims/Idle = SubResource( 7 )
anims/Run_Left = SubResource( 25 )
anims/Run_Right = SubResource( 26 )

[node name="AnimationTree" type="AnimationTree" parent="EnemyBody"]
tree_root = SubResource( 9 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 10 )

[node name="HealthBar" type="Node2D" parent="EnemyBody"]

[node name="TextureProgress" type="TextureProgress" parent="EnemyBody/HealthBar"]
margin_left = -22.995
margin_top = -14.358
margin_right = 57.005
margin_bottom = 11.642
rect_scale = Vector2( 0.302928, 0.335027 )
texture_under = ExtResource( 4 )
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyShadowBody" type="KinematicBody2D" parent="."]
rotation = -3.14159
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="EnemyShadowBody"]
modulate = Color( 0, 0, 0, 0.160784 )
position = Vector2( 0.0483418, -32.0394 )
scale = Vector2( 0.999997, 0.334783 )
frames = ExtResource( 3 )
animation = "idle"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyShadowBody"]
position = Vector2( 8.79374, -24 )
shape = SubResource( 38 )

[connection signal="body_entered" from="EnemyBody/EnemyRange" to="EnemyBody" method="_on_EnemyRange_body_entered"]
[connection signal="body_exited" from="EnemyBody/EnemyRange" to="EnemyBody" method="_on_EnemyRange_body_exited"]
